package net.proselyte.basepatterns.structural.adapter;

public class AdapterJavaToDatabase {
}
