package net.proselyte.basepatterns.structural.adapter;

public class DatabaseRunner {
    public static void main(String[] args) {

    }
}
